Closed Bug 1582323 Opened 5 years ago Closed 5 years ago

File input browse button no longer gets accessibility focus

Categories

(Core :: Disability Access APIs, defect, P1)

68 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- verified
firefox69 --- wontfix
firefox70 + verified
firefox71 --- verified

People

(Reporter: Jamie, Assigned: Jamie)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

STR (with the NVDA screen reader):

  1. Open this test case:
    data:text/html,<body role="application"><input type="file"></body>
  2. Tab to the file input.
    • Expected: NVDA should report "Browse… button"
    • Actual: NVDA reports just "text frame" (or "grouping" if the fix for bug 1316965 has already landed)

4:28.23 INFO: Last good revision: 710344cf9b5a442b0d4de8925ac63e4ea2fbd26b
4:28.24 INFO: First bad revision: e152590056cc434823f354f149706d28b6127c66
4:28.26 INFO: Pushlog:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=710344cf9b5a442b0d4de8925ac63e4ea2fbd26b&tochange=e152590056cc434823f354f149706d28b6127c66

I'm pretty sure this is caused by bug 505355, which changed things so that the file input itself gets focused instead of the button inside it.

Impact: This will be very confusing for users tabbing to a file input using screen reader focus mode. They probably won't realise it is a file input at all.

Version: unspecified → 68 Branch
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/768b6818e666
When a file input has DOM focus, focus the browse button inside it for a11y. r=MarcoZ
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → jteh

Do you want to request uplift to beta and/or esr68?

Flags: needinfo?(jteh)

Comment on attachment 9093770 [details]
Bug 1582323: When a file input has DOM focus, focus the browse button inside it for a11y.

Beta/Release Uplift Approval Request

  • User impact if declined: Users tabbing to a file input using screen reader focus mode will be very confused and probably won't realise it is a file input at all.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Straightforward patch which only affects accessibility focus for file inputs.
  • String changes made/needed: None.

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Causes problems for screen reader users trying to use file inputs.
  • User impact if declined: Users tabbing to a file input using screen reader focus mode will be very confused and probably won't realise it is a file input at all.
  • Fix Landed on Version: 71, also requesting uplift to 70
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Straightforward patch which only affects accessibility focus for file inputs.
  • String or UUID changes made by this patch: None.
Flags: needinfo?(jteh)
Attachment #9093770 - Flags: approval-mozilla-esr68?
Attachment #9093770 - Flags: approval-mozilla-beta?

Verified fixed in Firefox 71 nightly 20190923215658.

QA Whiteboard: [qa-triaged]

Comment on attachment 9093770 [details]
Bug 1582323: When a file input has DOM focus, focus the browse button inside it for a11y.

Fix for a11y regression from 68, verified in Nightly.
OK for uplift for beta 10 and esr68.

Attachment #9093770 - Flags: approval-mozilla-esr68?
Attachment #9093770 - Flags: approval-mozilla-esr68+
Attachment #9093770 - Flags: approval-mozilla-beta?
Attachment #9093770 - Flags: approval-mozilla-beta+

I have reproduced this issue using Firefox 71.0a1 (2019.09.18) on Win 10 x64.
I can confirm this issue is fixed, I verified using Firefox 70.0b10 build from treeherder (https://treeherder.mozilla.org/#/jobs?repo=mozilla-beta&revision=d12a3157212a37629fe31e1b272445110c9b5660&selectedJob=268241328) on Win 10 x64 and Win 7 x64, waiting for fix in esr68.

I can confirm this issue is fixed, I verified using Firefox 68.2.0esr build from treeherder (https://treeherder.mozilla.org/#/jobs?repo=mozilla-esr68&revision=e6a84b47baef6c678843b9764f85710a5fe18bd7&selectedJob=268376840) on Win 8.1 x64 and Win 10 x64.

Flags: qe-verify+
Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: