Bug 1582323: When a file input has DOM focus, focus the browse button inside it for a11y. r=MarcoZ a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D46386